# solar

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  solar.pc.in
src/: Makefile-LIBADD.inc  Makefile.am  libsolar.c  libsolar.pc.in  libsolar_config  solar  solar-common.c  solar-common.h  solar-main.c  solar-test.c  solar-test2  solar-test2.c  solar-test2.pc.in  solar-test4  solar-test4.pc.in  solar-test5.c  solar.c  solar.h  solar.pc.in  solar2.c  solar2.h  solar3.c  solar3.h  solar4.c  solar4.h  solar5.c  solar_config  solar_test2_config  solar_test4_config  sunriset  sunriset-test.c  sunriset.c  sunriset.h
